# todo

./: .gitignore  CHANGELOG.md  README.md  RELEASES.md  cargo.toml  cliff.toml  portable_structure.sh  rust_arch.md
.agent/workflows/: doctor.md
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/event_bus/: Cargo.toml
crates/event_bus/src/: lib.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  main.rs  pulse.rs  timeline.rs  tray.rs
crates/server/src/handlers/: mod.rs  utils.rs
data/: db.sqlite3
scripts/: validate_skills.py
src/: auth.rs  main.rs  notifications.rs  pulse.rs  timeline.rs  tray.rs
src/handlers/: journal_handlers.rs
static/: index.html  journal_page.html  pulse_ui.html
