[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
tiny_http.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
argon2 = "0.5"
password-hash = "0.5"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = { workspace = true }
protocol = { path = "../protocol" }
event_bus = { path = "../event_bus" }
database = { path = "../database" }
monitor = { path = "../monitor" }
tray-icon.workspace = true
tao.workspace = true
uuid.workspace = true
chrono.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"
